--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html {
 
 body {
     min-height:100vh;
-    background: url("https://i.imgur.com/3HxgNMs.jpeg") center;
+    background: url("https://i.imgur.com/YbbFBve.jpeg") center;
     background-size:cover;
     overflow:hidden;
     display:flex;
@@ -29,9 +29,12 @@ body {
 }
 
 .wrapper {
-    width: max(40%, 600px);
-    margin-top:460px;
-    margin-left:40px;
+    background:url("https://i.imgur.com/f8ZXech.png")center center no-repeat;
+    background-size: cover; 
+    background-attachment: fixed; 
+    width: 100vw;           
+    height: 100vh;            
+    padding-top:20px;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -40,7 +43,6 @@ body {
 
 
 h2 {
-    margin-left:60px;
     text-shadow:
                 0 0 5px #000000,
                 0 0 10px #000000,
@@ -50,20 +52,24 @@ h2 {
 }
 
 form {
-    width:min(400px, 100%);
     margin-bottom:25px;
-    margin-left:60px;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    gap:10px;
+    margin-left:80px;
+    margin-top:400px;
+    width: 30vw;           
+    max-width: 400px;     
+    min-width: 250px;     
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1vh;   
+    font-size: 1vw;   
 }
 
 form > div {
     width:100%;
     display:flex;
     justify-content:center;
-    font-size: 20px;
+    
     font-family: Indie flower;
 }
 
@@ -76,7 +82,7 @@ form label {
     display:flex;
     justify-content:center;
     align-items:center;
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px 0 0 10px;  
 }
 
 form input {
@@ -105,10 +111,11 @@ div:has(input:focus) > label{
 }
 
 form button {
+    padding: 0.7em 3vw;    
+    font-size: 1vw;       
     margin-top:10px;
     border:none;
     border-radius:1000px;
-    padding: .85em 4em;
     background-color: var(--accent-color);
     color: var(--base-color);
     font:inherit;
@@ -142,6 +149,7 @@ a:hover {
     border-radius: 15px;
     color:black;
     padding:7px;
+     font-size: 1vw;  
 }
 
 @media(max-width:1100px){
